<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAlarmActivity"
    android:background="@color/green"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:fontFamily="sans-serif-black"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/addalarm"
        android:textColor="@color/white"
        />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="70dp"
            android:background="@drawable/button"
            android:src="@drawable/arrow"
            />
        </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/fieldtime"
            android:text=""
            />

        <TextView
            android:background="@drawable/fielddate"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="65dp"
            />
        />
    </LinearLayout>
    </ScrollView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/repeat"
        android:textColor="@color/white"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatToggleButton
            android:textOff=""
            android:textOn=""
            android:background="@drawable/rectangle"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:text="@string/monday"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatToggleButton
            android:textOff=""
            android:textOn=""
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:text="@string/tuesday"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatToggleButton
            android:textOff=""
            android:textOn=""
            android:background="@drawable/rectangle"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:text="@string/wednesday"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatToggleButton
            android:textOff=""
            android:textOn=""
            android:background="@drawable/rectangle"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:text="@string/thursday"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatToggleButton
            android:textOff=""
            android:textOn=""
            android:background="@drawable/rectangle"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:text="@string/friday"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatToggleButton
            android:textOff=""
            android:textOn=""
            android:background="@drawable/rectangle"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:text="@string/subbota"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatToggleButton
            android:textOff=""
            android:textOn=""
            android:background="@drawable/rectangle"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:text="@string/sunday"
            />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:background="@drawable/bigbutton"
        android:text="@string/createalarm"
        android:layout_width="312dp"
        android:layout_height="60dp"
        android:layout_marginTop="150dp"
        android:layout_marginStart="50dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        />
</LinearLayout>